<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/md_tableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:shrinkColumns="*"
    android:stretchColumns="*" >

    <TableRow
        android:id="@+id/mdtableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/movieDesc_title"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/tempEmpty"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </TableRow>

    <TableRow
        android:id="@+id/mdtableRow2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center_horizontal" >

        <ImageView
            android:id="@+id/movieDesc_detailed"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/tempEmpty"
            android:src="@drawable/poster_not_found" />
    </TableRow>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <TableRow
            android:id="@+id/mdtableRow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" >

            <TextView
                android:id="@+id/movieDesc_releaseDate"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="@string/tempEmpty" />

            <TextView
                android:id="@+id/movieDesc_mpaa_rating"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/tempEmpty" />

            <TextView
                android:id="@+id/movieDesc_runtime"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/tempEmpty" />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/movieDesc_critics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="60dp"
                android:text="@string/critics"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/movieDesc_audience"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="64dp"
                android:text="@string/audience"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </RelativeLayout>
    </TableLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="70dp" >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="52dp"
                android:contentDescription="@string/tempEmpty"
                android:src="@drawable/upright" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imageView2"
                android:layout_marginRight="15dp"
                android:layout_toLeftOf="@+id/imageView2"
                android:text="@string/sampleNum"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginRight="80dp"
                android:layout_toLeftOf="@+id/textView2"
                android:contentDescription="@string/tempEmpty"
                android:src="@drawable/upright" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imageView1"
                android:layout_marginRight="15dp"
                android:layout_toLeftOf="@+id/imageView1"
                android:text="@string/sampleNum"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </RelativeLayout>
    </TableLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/movieDesc_back"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/tempEmpty"
                android:src="@drawable/navigation_back" />

            <ImageView
                android:id="@+id/movieDesc_web"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/tempEmpty"
                android:src="@drawable/location_web_site" />

            <ImageView
                android:id="@+id/movieDesc_star"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/tempEmpty"
                android:src="@drawable/rating_not_important" />
        </TableRow>
    </TableLayout>

</TableLayout>